@@ -3,6 +3,7 @@ CHANGELOG
 UNRELEASED
   * FIX : handle distinct parameter automatically
   * FIX : batch response handler gets the proper search state
+  * FEATURE : (breaking) no more extra queries
   * FEATURE : (breaking) Facets results are stored in an array with an order
   that reflects their definition.
   * FEATURE : Search results explicit definition
